re PR c++/19508 (dwarf2, ICE on __attribute__(aligned) in class template)

2005-01-20  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

        PR c++/19508
        * g++.dg/ext/attrib20.C: New test.

2005-01-20  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

        PR c++/19508
        * decl2.c (grokfield): Do not apply attributes to template parameters
        as they are ignored by tsubst anyway.

From-SVN: r95230